<resources>
    <string name="app_name">BookIt!</string>
    <string name="price">Price</string>
    <string name="publisher">Publisher</string>
    <string name="category">Category</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="description">Book Description</string>
    <string name="date">Date</string>
    <string name="author">Author</string>
    <string name="rank">Rank</string>
    <string name="page">Page</string>
    <string name="sold">Sold</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="arsil">Arsil Kultura Anzil</string>
    <string name="email">arsil.anzil@gmail.com</string>
    <string-array name="item_title">
        <item>Atomic Habits</item>
        <item>Laut Bercerita</item>
        <item>Rich Dad Poor Dad</item>
        <item>Bicara Itu Ada Seninya</item>
        <item>Funiculi Funicula</item>
        <item>You Do You</item>
        <item>Sebuah Seni untuk Bersikap Bodo Amat</item>
        <item>Berani Tidak Disukai</item>
        <item>Keajaiban Toko Kelontong Namiya</item>
        <item>The Things You Can See Only When You Slow Down</item>
    </string-array>
    <string-array name="item_price">
        <item>Rp. 108.000</item>
        <item>Rp. 115.000</item>
        <item>Rp. 68.000</item>
        <item>Rp. 79.000</item>
        <item>Rp. 79.000</item>
        <item>Rp. 128.000</item>
        <item>Rp. 78.000</item>
        <item>Rp. 98.000</item>
        <item>Rp. 130.000</item>
        <item>Rp. 125.000</item>
    </string-array>
    <string-array name="item_category">
        <item>Self Improvement</item>
        <item>Novel</item>
        <item>Business Economics</item>
        <item>Self Improvement</item>
        <item>Novel</item>
        <item>Novel</item>
        <item>Self Improvement</item>
        <item>Self Improvement</item>
        <item>Novel</item>
        <item>Self Improvement</item>
    </string-array>
    <string-array name="item_author">
        <item>James Clear</item>
        <item>Leila S. Chudori</item>
        <item>Robert T. Kiyosaki</item>
        <item>Oh Su Hyang</item>
        <item>Toshikazu Kawaguchi</item>
        <item>Fellexandro Ruby</item>
        <item>Mark Manson</item>
        <item>Ichiro Kishimi Dan Fumitake Koga</item>
        <item>Keigo Higashino</item>
        <item>Haemin Sunim</item>
    </string-array>
    <string-array name="item_publisher">
        <item>Gramedia</item>
        <item>Gramedia</item>
        <item>Gramedia</item>
        <item>Bhuana Ilmu Populer</item>
        <item>Gramedia</item>
        <item>Gramedia</item>
        <item>Grasindo</item>
        <item>Gramedia</item>
        <item>Gramedia</item>
        <item>Gramedia</item>
    </string-array>
    <string-array name="item_sold">
        <item>10 k+</item>
        <item>8 k+</item>
        <item>7 k+</item>
        <item>7 k+</item>
        <item>5 k+</item>
        <item>4 k+</item>
        <item>3 k+</item>
        <item>3 k+</item>
        <item>2 k+</item>
        <item>2 k+</item>
    </string-array>
    <string-array name="item_rank">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="item_page">
        <item>342</item>
        <item>394</item>
        <item>244</item>
        <item>256</item>
        <item>224</item>
        <item>252</item>
        <item>256</item>
        <item>350</item>
        <item>400</item>
        <item>280</item>
    </string-array>
</resources>