<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="170dp"
            android:layout_height="263dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toStartOf="@+id/gd_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/value"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/author"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_value" />

        <TextView
            android:id="@+id/tv_author_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_author" />

        <TextView
            android:id="@+id/tv_category"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_author_value" />

        <TextView
            android:id="@+id/tv_category_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/value"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_category" />

        <TextView
            android:id="@+id/tv_publisher"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/publisher"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_value" />

        <TextView
            android:id="@+id/tv_publisher_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/value"
            app:layout_constraintStart_toStartOf="@+id/gd_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_publisher" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/BigTittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/iv_book"
            app:layout_constraintTop_toBottomOf="@+id/iv_book" />

        <TextView
            android:id="@+id/tv_rank"
            style="@style/DescStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rank"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_rank_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/value"
            app:layout_constraintStart_toEndOf="@+id/tv_rank"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_sold"
            style="@style/DescStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/sold"
            app:layout_constraintStart_toEndOf="@+id/tv_rank_value"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_sold_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/value"
            app:layout_constraintStart_toEndOf="@+id/tv_sold"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_page"
            style="@style/DescStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/page"
            app:layout_constraintStart_toEndOf="@+id/tv_sold_value"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_page_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/value"
            app:layout_constraintStart_toEndOf="@+id/tv_page"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/tv_rank"
            app:layout_constraintTop_toBottomOf="@+id/tv_rank" />

        <TextView
            android:id="@+id/tv_description_value"
            style="@style/DescStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:justificationMode="inter_word"
            android:text="@string/value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:targetApi="o" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>